[gd_scene load_steps=8 format=2]

[ext_resource path="res://Src/Code/PortalButton.gd" type="Script" id=1]
[ext_resource path="res://Src/Code/InvisibleButton.gd" type="Script" id=2]
[ext_resource path="res://Src/Code/SpeedButton.gd" type="Script" id=3]
[ext_resource path="res://Src/Code/UI.gd" type="Script" id=4]
[ext_resource path="res://Src/UI/PopupDialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI.tres" type="Theme" id=6]
[ext_resource path="res://Assets/LeelaLives/MicrosoftTeams-image (1).png" type="Texture" id=7]

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
__meta__ = {
"_editor_description_": "Just keeps everything in place"
}

[node name="Lives" type="Label" parent="CanvasLayer"]
visible = false
margin_left = -95.439
margin_top = 8.18949
margin_right = 47.561
margin_bottom = 22.1895
theme = ExtResource( 6 )
text = "Progress Placeholder: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 175.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortalButton" type="Button" parent="CanvasLayer/HBoxContainer"]
visible = false
margin_right = 46.0
margin_bottom = 20.0
text = "Portal"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvisibleButton" type="Button" parent="CanvasLayer/HBoxContainer"]
visible = false
margin_left = 50.0
margin_right = 115.0
margin_bottom = 20.0
text = "Invisible"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedButton" type="Button" parent="CanvasLayer/HBoxContainer"]
visible = false
margin_left = 50.0
margin_right = 94.0
margin_bottom = 20.0
text = "SPEED"
script = ExtResource( 3 )

[node name="PopupDialog" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 128.0
margin_bottom = 128.0
rect_scale = Vector2( 0.25, 0.25 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leela" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Leela2" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_left = 133.0
margin_right = 261.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Leela3" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_left = 266.0
margin_right = 394.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Leela4" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_left = 399.0
margin_right = 527.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Leela5" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_left = 532.0
margin_right = 660.0
margin_bottom = 128.0
texture = ExtResource( 7 )
[connection signal="pressed" from="CanvasLayer/HBoxContainer/PortalButton" to="CanvasLayer/HBoxContainer/PortalButton" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/InvisibleButton" to="CanvasLayer/HBoxContainer/InvisibleButton" method="_on_InvisibleButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/SpeedButton" to="CanvasLayer/HBoxContainer/SpeedButton" method="_on_SpeedButton_pressed"]
